Updated Default Event Generator